# kcollectd

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README.md  config.h.in  configure.in.in  subdirs
debian/: changelog  control  copyright  kcollectd.manpages  rules  watch
debian/patches/: boost1.46.patch  docbook-4.2.patch  po-lang.patch  series
doc/: CMakeLists.txt  Makefile.am  kcollectd.1  man-kcollectd.1.docbook  man-kcollectd.1.docbook.in
doc/en/: CMakeLists.txt  Makefile.am  index.docbook  index.docbook.in
kcollectd/: .directory  CMakeLists.txt  Makefile.am  graph.cc  graph.h  gui.cc  gui.h  kcollectd.cc  kcollectd.desktop  kcollectd.lsm  kcollectd.xml  labeling.cc  labeling.h  misc.cc  misc.h  rrd_interface.cc  rrd_interface.h  timeaxis.cc  timeaxis.h
kcollectd/icons/: Makefile.am
po/: de.po  kcollectd.pot
